JIRA-3-5: Added mapper classes